# imatlab

./: .gitignore  claude.md  kernel.json  pyproject.toml  setup.cfg  setup.py  test_debug.m
lib/imatlab/: __init__.py  __main__.py  _kernel.py  _language_server.py
lib/imatlab/res/: imatlab_export_fig.m  imatlab_extract_functions.m  imatlab_post_execute.m  is_desktop_visible.m  is_in_debug_mode.m
lib/imatlab/resources/: imatlab_export_fig.m  is_dbstop_if_error.m
lib/imatlabx/: _kernel.py
lib/imatlabx/res/: imatlab_export_fig.m  imatlab_post_execute.m  imatlab_pre_execute.m
