[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "imatlab"
version = "0.1.0.dev0"  # Static version for now, can switch to dynamic later
description = "A Jupyter kernel for MATLAB"
readme = "README.rst"
license = {text = "MIT"}
authors = [
    {name = "Antony Lee + Dan O'Shea"}
]
classifiers = [
    "Framework :: IPython",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Shells",
]
requires-python = ">=3.8"
dependencies = [
    "ipykernel>=4.1",
    "nbconvert>=4.2",
    "plotly>=1.13.0",
    "widgetsnbextension>=1.0",
    "matlabengine>=9.13",
    "pygls>=1.3.0",  # Python LSP client library
]

[project.urls]
Homepage = "https://github.com/djoshea/imatlab"

[project.entry-points."nbconvert.exporters"]
matlab = "imatlab._exporter:MatlabExporter"

[tool.hatch.build.targets.wheel]
packages = ["lib/imatlab"]

[tool.hatch.build.targets.wheel.sources]
"lib/imatlab" = "imatlab"

# Configuration for the MATLAB Language Server (used at runtime)
[tool.imatlab.language-server]
# Language server auto-downloaded to ~/.imatlab/language-server/ on first use
repo = "https://github.com/mathworks/MATLAB-language-server.git"
version = "v1.3.8"
